# python-typing-pydantic-oop

./: .gitignore  README.md  Typing, Pydantic, and Object Oriented Programming.ipynb  environment.yml  pyproject.toml
examples/: __init__.py  time.py
examples/using_json/: __init__.py  example.py  get_catalog.py
examples/using_pydantic/: __init__.py  earthquake_catalog.py  example.py  geojson.py  get_catalog.py
