[tool.poetry]
name = "python-typing-pydantic-oop"
version = "0.1.0"
description = "GHSC HazDev Summer Python Series : Typing, Pydantic, and Object Oriented Programming"
authors = ["Jeremy Fee <jmfee@usgs.gov>"]

[tool.poetry.dependencies]
python = "^3.7,<3.10"
jupyter = "^1.0.0"
numpy = "^1.21.2"
pydantic = "^1.8.2"
python-dateutil = "^2.8.2"
requests = "^2.26.0"
typing-extensions = "^3.10.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
mypy = "^0.910"
types-python-dateutil = "^0.1.6"
types-requests = "^2.25.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
